# tp_ros2

./: .gitignore  Makefile  README.md  docker-compose.yaml
bohorquez_hernandez_pkg/: package.xml
bohorquez_hernandez_pkg/config/: topics_perspective.perspective
bohorquez_hernandez_pkg/launch/: bag_demo.launch.py
tp1/bohorquez_hernandez_pkg/: CMakeLists.txt
tp1/bohorquez_hernandez_pkg/rviz/: go1_running.rviz
tp2/: README.md
tp2/bohorquez_hernandez_interfaces/: CMakeLists.txt  package.xml
tp2/bohorquez_hernandez_interfaces/action/: Republicar.action
tp2/bohorquez_hernandez_interfaces/srv/: ResetContador.srv
tp2/bohorquez_hernandez_tp2_pkg/: package.xml  setup.cfg  setup.py
tp2/bohorquez_hernandez_tp2_pkg/bohorquez_hernandez_tp2_pkg/: contador_node.py  monitor_node.py  republicador_client.py  republicador_server.py
tp2/bohorquez_hernandez_tp2_pkg/launch/: contador.launch.py  republicador.launch.py
tp3/: README.md
tp3/bohorquez_durante_tp3_pkg/: package.xml  setup.cfg  setup.py
tp3/bohorquez_durante_tp3_pkg/bohorquez_durante_tp3_pkg/: base_tool_tf.py
tp3/bohorquez_durante_tp3_pkg/launch/: tp3.launch.py
