<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bohorquez_hernandez_pkg</name>
  <version>0.0.0</version>
  <description>TP: reproduccion de un rosbag (Unitree Go1 - Leg-KILO, secuencia running) con visualizacion en RViz y RQT</description>
  <maintainer email="gabriellabohorquez@gmail.com">bohorquez_hernandez</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2bag</exec_depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_topic</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
