<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bohorquez_hernandez_tp2_pkg</name>
  <version>0.0.1</version>
  <description>TP2: contador con servicio (ej1) y republicador con action (ej2).</description>
  <maintainer email="gabriellabohorquez@gmail.com">Maria Bohorquez</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>bohorquez_hernandez_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
