<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bohorquez_durante_tp3_pkg</name>
  <version>0.0.1</version>
  <description>TP3: nodo que consulta la TF base_link -> tool0 e imprime la matriz SE(3).</description>
  <maintainer email="gabriellabohorquez@gmail.com">Maria Bohorquez</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>clase3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
